default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>A container for comments, etc. used by Continuous Feedback in Performance Management.</description>
    <label>(Deprecated) Feedback Item</label>
    <nameField>
        <displayFormat>Feedback-{00000}</displayFormat>
        <label>Feedback Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(Deprecated) Feedback Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>