default/objects/Feedback__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The author of this feedback.</description>
    <label>Author</label>
    <referenceTo>fHCM2__Team_Member__c</referenceTo>
    <relationshipLabel>Feedback Items</relationshipLabel>
    <relationshipName>Feedback_Items</relationshipName>
    <type>Lookup</type>
</CustomField>